@@ -116,6 +116,10 @@ BOOST_FIND_HEADER([boost/lexical_cast.hpp])
 BOOST_FIND_HEADER([boost/range.hpp])
 dnl BOOST_FIND_HEADER([boost/range/algorithm/sort.hpp])
 BOOST_FILESYSTEM
+BOOST_LDFLAGS="$BOOST_FILESYSTEM_LDFLAGS $BOOST_SYSTEM_LDFLAGS"
+BOOST_LIBS="$BOOST_FILESYSTEM_LIBS $BOOST_SYSTEM_LIBS"
+AC_SUBST(BOOST_LDFLAGS)
+AC_SUBST(BOOST_LIBS)
 
 
 # yaml-cpp parser library
